  result, many helper functions that were available from ``grok.util``
  were removed.  The functionality is mostly available from the
  directives themselves now.

* Refactored class grokkers to make use of Martian's new declarative
  way for retrieving directive data from classes, and Martian's new
  declarative way to write grokkers.

Feature changes
---------------

* Updated tutorial section about grokproject to fit the latest changes.

* Added ``grok.traversable`` directive for easy traversal to attributes and
  methods.

* ``grok.require()`` can refer to subclasses of ``grok.Permission``
  directly, instead of their id. This, for one, avoids making typos in
  permission ids. Permission components *do* still need the
  grok.name() directive for defining the permission's id.

* Added an optional parameter 'data' to the method 'url()' that accepts
  a dictionary that is then converted to a query string. See

  http://grok.zope.org/documentation/how-to/generate-urls-with-the-url-function-in-views/view

* Added an ``OrderedContainer`` component.

* Introduced the new `sphinx`-based documentation engine. See
  grokdocs/README.txt for details.

* Merged the versions from the 3.4 KGS (known good set):
  http://download.zope.org/zope3.4/versions-3.4.0c1.cfg

  We are now using the latest Zope 3 releases for all Zope packages.
  For upgrade notes, see doc/upgrade.txt for more information.

* Added support for easier test setup based on z3c.testsetup. This is a
  more stable and more powerful implementation of
  grok.testing.register_all_tests(). See

    http://grok.zope.org/documentation/how-to/tests-with-grok-testing

  for details.

* There is now a new ``IContext`` interface available. If you make
  your class implement that interface, it (and its subclasses) will be
  candidates for being a context in a module (for automatic context
  lookup if ``grok.context`` is not present). This relies on a feature
  introduced in grokcore.component 1.1.
